[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mudkip = "^0.8.0"
furo = "2022.12.7"
sphinx_design = "^0.3.0"
sphinx-thebe = "^0.2.1"
sphinxext-opengraph = "^0.8.1"
sphinx-copybutton = "^0.5.1"
sphinxcontrib-repl = "^0.4.1"
subgrounds = {extras = ["dash"], version = "^1.0.3"}

[tool.poe.tasks]
develop = { shell = "mudkip develop" }
generate-api-docs = { shell = "sphinx-apidoc --output docs/api subgrounds --separate --force" }

[tool.mudkip]
base_url = "https://docs.playgrounds.network"
preset = "furo"

[tool.mudkip.override]
html_title = "Playgrounds"
html_favicon = "_assets/pg_icon.png"
html_static_path = ["_static", "_assets"]
html_css_files = [
    "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css",
    "fonts.css",
    "weights.css",
    "custom.css",
]
html_show_copyright = false
html_show_sphinx = false

templates_path = ["_templates"]

pygments_style = "tango"
pygments_dark_style = "material"

extensions = [
    "sphinx_design",        # enables fancy design, like cards, etc
    "sphinxext.opengraph",  # provides social media cards + ranking info
    "sphinx_copybutton",    # adds copy buttons to raw code blocks
    # "sphinx_thebe",       # transforms code cells into executable notebook cells
    "sphinxcontrib.repl",   # auto evaluates code-blocks w/ `repl`
]
myst_enable_extensions = ["substitution", "colon_fence"]
suppress_warnings = ["myst.header"]

nitpicky = false

# Open Graph Metadata (https://ogp.me/)
ogp_site_url = "https://docs.playgrounds.network/"
ogp_site_name = "Playgrounds Documentation"

ogp_enable_meta_description = true

[tool.mudkip.override.ogp_social_cards]
enable = true
image = "_static/pg-brandmark.png"
line_color = "#040019"

# [tool.mudkip.override.thebe_config]
# repository_url = "https://github.com/0xPlaygrounds/jupyter-stacks-subgrounds"
# repository_branch = "master"  # TODO -> main
# codemirror-theme = "ayu-mirage"

[tool.mudkip.override.html_theme_options]
sidebar_hide_name = true
light_logo = "pg-logotype-dark.svg"
dark_logo = "pg-logotype-primary.svg"

[tool.mudkip.override.html_theme_options.light_css_variables]
color-foreground-primary = "#040019"
color-foreground-secondary = "black"

color-background-primary = "#CFF5FC"
color-background-secondary = "#B4DCE4"

color-background-border = "#B5DCE4"

color-header-text = "#191F2E"

color-sidebar-caption-text = "#0083CF"
color-sidebar-background = "#B4DCE4"
color-sidebar-search-background--focus = "var(--color-sidebar-item-background--hover)"

# sd-color-shadow = "#040019"

color-brand-primary = "#191F2E"
color-brand-content = "#040019"

font-stack = "sofia-pro, sans-serif"

[tool.mudkip.override.html_theme_options.dark_css_variables]
color-foreground-primary = "#E6E6E6"
color-foreground-secondary = "#CCCCCC"
color-foreground-muted = "#A9ACAC"

color-background-primary = "#040019"
color-background-secondary = "#131720"

color-header-text = "#54DDF8"

color-sidebar-link-text--top-level = "var(--color-foreground-muted)"
color-sidebar-caption-text = "var(--color-foreground-primary)"

color-sidebar-background = "linear-gradient(180deg, #131720 36.39%, #1A263D 100%)"
color-sidebar-item-background--current = "transparent"
color-sidebar-search-background--focus = "var(--color-sidebar-item-background--hover)"

color-brand-primary = "#54DDF8"
color-brand-content = "#0083CF"

sd-color-card-background = "#191F2E"
sd-color-card-border-hover = "#54DDF8"
# sd-color-shadow = "#54DDF8"

font-stack = "sofia-pro, sans-serif"

[[tool.mudkip.override.html_theme_options.footer_icons]]
name = "GitHub"
url = "https://github.com/0xPlaygrounds/subgrounds"
html = ""
class = "fa-brands fa-github fa-xl"

[[tool.mudkip.override.html_theme_options.footer_icons]]
name = "Discord"
url = "https://discord.gg/v4r4zhBAh2"
html = ""
class = "fa-brands fa-discord fa-xl"

[[tool.mudkip.override.html_theme_options.footer_icons]]
name = "Twitter"
url = "https://twitter.com/Playgrounds0x"
html = ""
class = "fa-brands fa-twitter fa-xl"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
