[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mudkip = "^0.8.0"
furo = "2022.12.7"
sphinx_design = "^0.3.0"
sphinx-thebe = "^0.2.1"
sphinxext-opengraph = "^0.8.1"
sphinx-copybutton = "^0.5.1"
sphinxcontrib-repl = "^0.4.1"
subgrounds = { extras = ["all"], version = "^1.6.0" }
sphinxcontrib-sass = "^0.3.4"
sphinx_tippy = "^0.4.1"
sphinx-jinja = "^2.0.2"
sphinxcontrib-youtube = "^1.2.0"
sphinx-code-include = "^1.1.1"
pygments = { git = "https://github.com/pygments/pygments" }

[tool.poe.tasks]
format = { shell = "blacken-docs --all-files" }
develop = { shell = "mudkip develop" }
clean = { shell = "mudkip clean" }
generate-api-docs = { shell = "sphinx-apidoc --output docs/subgrounds/api subgrounds --separate --force" }

[tool.mudkip]
base_url = "https://docs.playgrounds.network"
preset = "furo"

[tool.mudkip.override]
html_title = "Playgrounds"
html_favicon = "icon.png"
html_static_path = ["_static"]
html_css_files = [
    "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css",
    "css/custom.css",
    "css/fonts.css",
    "css/weights.css",
    "css/theming.css",
]
html_js_files = [
    "https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js",
]
html_show_copyright = false
html_show_sphinx = false

templates_path = ["_templates"]

pygments_style = "native"
pygments_dark_style = "material"

extensions = [
    "sphinxcontrib.sass",     # enables `.sass`/`.scss` support for CSS
    "sphinx_design",          # enables fancy design, like cards, etc
    "sphinxext.opengraph",    # provides social media cards + ranking info
    "sphinx_copybutton",      # adds copy buttons to raw code blocks
    "sphinx_thebe",           # transforms code cells into executable cells
    "sphinxcontrib.repl",     # auto evaluates code-blocks w/ `repl`
    "sphinx.ext.intersphinx", # link across external docs 🔥
    "sphinx_tippy",           # enables smart tooltips on items
    "sphinxcontrib.youtube",  # enables easy youtube support
    "code_include.extension", # enables us to include code from source
]
# myst_fence_as_directive = ["python", "mermaid"]

myst_enable_extensions = ["substitution", "colon_fence"]
myst_heading_anchors = 2

autosectionlabel_prefix_document = true
suppress_warnings = ["myst.header"]

nitpicky = false

# Open Graph Metadata (https://ogp.me/)
ogp_site_url = "https://docs.playgrounds.network/"
ogp_site_name = "Playgrounds Documentation"

ogp_enable_meta_description = true

# sass config
sass_src_dir = "_styles"
sass_out_dir = "_build/dist/_static/css"

[tool.mudkip.override.html_sidebars]
"**" = [
    "sidebar/brand.html",
    "sidebar/search.html",
    "sidebar/scroll-start.html",
    "sidebar/navigation.html",
    "sidebar/scroll-end.html",
    "sidebar/variant-selector.html",
]

[tool.mudkip.override.intersphinx_mapping]
python = ["https://docs.python.org/3", ""]
pandas = ["http://pandas.pydata.org/pandas-docs/dev", ""]

[tool.mudkip.override.sass_targets]
"theming.scss" = "theming.css"

[tool.mudkip.override.ogp_social_cards]
enable = true
image = "_static/assets/pg-brandmark.png"
line_color = "#040019"

[tool.mudkip.override.thebe_config]
repository_url = "https://github.com/0xPlaygrounds/jupyter-stacks-subgrounds"
repository_branch = "main"
# codemirror-theme = "ayu-mirage"

[tool.mudkip.override.html_theme_options]
announcement = "<a href='/subgrounds/getting_started/async'>Async Subgrounds has arrived 🎉 </a>"

sidebar_hide_name = true
light_logo = "assets/pg-logotype-dark.svg"
dark_logo = "assets/pg-logotype-primary.svg"

[tool.mudkip.override.html_theme_options.light_css_variables]
color-foreground-primary = "#040019"
color-foreground-secondary = "#191F2E"

color-background-primary = "#F4F4F4"
color-brand-primary = "var(--color-foreground-secondary)"

color-admonition-background = "var(--color-foreground-secondary)"
color-announcement-background = "var(--color-foreground-secondary)"

color-link = "#0083CF"

sd-color-success = "#5CC653"
sd-color-warning = "#F1C21B"
sd-color-info = "#54DDF8"
sd-color-danger = "#D54A44"

font-stack = "sofia-pro, sans-serif"
font-stack--monospace = "carbona-variable, monospace"

[tool.mudkip.override.html_theme_options.dark_css_variables]
color-foreground-primary = "#E6E6E6"
color-foreground-secondary = "#CCCCCC"
color-foreground-muted = "#A9ACAC"

color-background-primary = "#040019"
color-background-secondary = "#131720"

color-header-text = "#54DDF8"

color-sidebar-link-text--top-level = "var(--color-foreground-muted)"
color-sidebar-caption-text = "var(--color-foreground-primary)"

color-sidebar-background = "linear-gradient(180deg, #000E19 36.39%, #0C263B 100%)"
color-sidebar-item-background--current = "transparent"
color-sidebar-search-background--focus = "var(--color-sidebar-item-background--hover)"

color-brand-primary = "#54DDF8"
color-brand-content = "#0083CF"

sd-color-card-background = "#191F2E"
sd-color-card-border-hover = "var(--color-brand-primary)"

sd-color-success = "#5CC653"
sd-color-warning = "#F1C21B"
sd-color-info = "#54DDF8"
sd-color-danger = "#D54A44"

color-admonition-background = "var(--sd-color-card-background)"
color-announcement-background = "var(--sd-color-card-background)"

font-stack = "sofia-pro, sans-serif"
font-stack--monospace = "carbona-variable, monospace"

[[tool.mudkip.override.html_theme_options.footer_icons]]
name = "GitHub"
url = "https://github.com/0xPlaygrounds/subgrounds"
html = ""
class = "fa-brands fa-github fa-l"

[[tool.mudkip.override.html_theme_options.footer_icons]]
name = "Discord"
url = "https://discord.gg/v4r4zhBAh2"
html = ""
class = "fa-brands fa-discord fa-l"

[[tool.mudkip.override.html_theme_options.footer_icons]]
name = "Twitter"
url = "https://twitter.com/Playgrounds0x"
html = ""
class = "fa-brands fa-twitter fa-l"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
