[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mudkip = "^0.8.0"
furo = "2022.12.7"
sphinx_design = "^0.3.0"
sphinx-thebe = "^0.2.1"
sphinxext-opengraph = "^0.8.1"
sphinx-copybutton = "^0.5.1"
sphinxcontrib-repl = "^0.4.1"
subgrounds = { git = "https://github.com/0xPlaygrounds/subgrounds.git", rev = "feat/async", extras = [
    "all",
] }
sphinxcontrib-sass = "^0.3.4"
sphinx_tippy = "^0.4.1"
sphinx-jinja = "^2.0.2"
sphinxcontrib-youtube = "^1.2.0"
sphinx-code-include = "^1.1.1"
pygments = { git = "https://github.com/pygments/pygments" }
blacken-docs = "^1.15.0"

[tool.poe.tasks]
format = "blacken-docs --all-files"
develop = "mudkip develop"
clean = "mudkip clean"
generate-api-docs = "sphinx-apidoc --output docs/subgrounds/api subgrounds --separate --force"

[tool.mudkip]
base_url = "https://docs.playgrounds.network"
preset = "furo"
section_label_depth = 4

[tool.mudkip.override]
html_title = "Playgrounds"
html_favicon = "icon.png"
html_static_path = ["_static"]
html_css_files = [
    "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css",
    "css/colors.css",
    "css/fonts.css",
    "css/weights.css",
    "css/theming.css",
]
html_js_files = [
    "https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js",
    "scripts/theme.js",
]
html_show_copyright = false
html_show_sphinx = false

templates_path = ["_templates"]

pygments_style = "tango"

extensions = [
    "sphinxcontrib.sass",     # enables `.sass`/`.scss` support for CSS
    "sphinx_design",          # enables fancy design, like cards, etc
    "sphinxext.opengraph",    # provides social media cards + ranking info
    "sphinx_copybutton",      # adds copy buttons to raw code blocks
    "sphinx_thebe",           # transforms code cells into executable cells
    "sphinxcontrib.repl",     # auto evaluates code-blocks w/ `repl`
    "sphinx.ext.intersphinx", # link across external docs 🔥
    # "sphinx_tippy",         # enables smart tooltips on items
    "sphinxcontrib.youtube",  # enables easy youtube support
    "code_include.extension", # enables us to include code from source
]

myst_enable_extensions = ["substitution", "colon_fence", "deflist"]
myst_heading_anchors = 2

suppress_warnings = [
    "myst.header",
    "refdoc",
    "autosectionlabel.*",
    "autodoc.import_object",
]

nitpicky = false

# Open Graph Metadata (https://ogp.me/)
ogp_image = "https://raw.githubusercontent.com/0xPlaygrounds/docs/main/docs/_static/assets/pg-logotype-primary.svg"
ogp_site_url = "https://docs.playgrounds.network/"
ogp_site_name = "Playgrounds Documentation"

ogp_enable_meta_description = true

# sass config
sass_src_dir = "_styles"
sass_out_dir = "_build/dist/_static/css"

# autodoc
autodoc_typehints_format = "short"
autodoc_preserve_defaults = true
autoclass_content = "both"

[tool.mudkip.override.autodoc_default_options]
members = true
undoc-member = true

[tool.mudkip.override.myst_substitutions]
new_bdg = '<span class="light-only">{bdg-success}`NEW`</span><span class="dark-only">{bdg-success-line}`NEW`</span>'
lab_bdg = '<span class="light-only">{bdg-warning}`LAB`</span><span class="dark-only">{bdg-warning-line}`LAB`</span>'
thebe_button = """
::::{admonition} Click for Interactive Documentation
:class: dropdown admonition important

Clicking this button will enable editing and execution of the code-blocks on this page. Learn more [here](/subgrounds/getting_started/basics).

```{thebe-button}
```

::::
"""


[tool.mudkip.override.html_sidebars]
"**" = [
    "sidebar/brand.html",
    "sidebar/search.html",
    "sidebar/scroll-start.html",
    "sidebar/navigation.html",
    "sidebar/scroll-end.html",
    "sidebar/variant-selector.html",
]

[tool.mudkip.override.intersphinx_mapping]
python = ["https://docs.python.org/3", ""]
pandas = ["http://pandas.pydata.org/pandas-docs/dev", ""]

[tool.mudkip.override.sass_targets]
"colors.scss" = "colors.css"
"theming.scss" = "theming.css"
"fonts.scss" = "fonts.css"
"weights.scss" = "weights.css"

[tool.mudkip.override.ogp_social_cards]
enable = true
image = "_static/assets/pg-brandmark.png"
line_color = "#040019"

[tool.mudkip.override.thebe_config]
repository_url = "https://github.com/0xPlaygrounds/jupyter-stacks-subgrounds"
repository_branch = "main"

[tool.mudkip.override.html_theme_options]
announcement = "<a href='/subgrounds/getting_started/async'> Async Subgrounds has arrived 🎉 </a>"

sidebar_hide_name = true
light_logo = "assets/pg-logotype-dark.svg"
dark_logo = "assets/pg-logotype-primary.svg"

[tool.mudkip.override.html_theme_options.light_css_variables]
color-foreground-primary = "#040019"
color-foreground-secondary = "#191F2E"

color-background-primary = "#EFF6FF"
color-background-secondary = "#E4EBFE"
color-brand-primary = "var(--color-foreground-secondary)"

color-code-background = "#9CCDFF"
color-inline-code-background = "#E4EBFE25"
color-code-foreground = "var(--color-foreground-secondary)"

color-sidebar-background = "linear-gradient(115deg, #54E1F8 22.69%, #0083CF 77.94%)"
color-sidebar-search-background = "transparent"
color-sidebar-caption-text = "#304881"

color-background-border = "#17BCDB50"
color-background-hover = "#77e2f8"

color-sidebar-item-background--current = "transparent"
color-sidebar-search-background--focus = "var(--color-sidebar-item-background--hover)"

sd-color-card-background = "var(--color-background-secondary)"
sd-color-card-border-hover = "var(--color-brand-primary)"

color-admonition-background = "white"
color-admonition-title = "var(--color-code-foreground)"
color-announcement-background = "var(--color-background-secondary)"
color-announcement-text = "var(--color-foreground-secondary)"

color-link = "#548BF8"

sd-color-success = "#5CC653"
sd-color-success-text = "var(--color-foreground-primary)"

sd-color-warning = "#F1C21B"
sd-color-warning-text = "var(--color-foreground-primary)"

sd-color-info = "#54DDF8"
sd-color-info-text = "var(--color-foreground-primary)"

sd-color-danger = "#D54A44"
sd-color-danger-text = "var(--color-foreground-primary)"

sd-color-secondary = "#548BF8"
sd-color-secondary-text = "var(--color-foreground-primary)"

color-admonition-title--important = "var(--sd-color-success)"
color-admonition-title--caution = "var(--sd-color-warning)"
color-admonition-title--warning = "var(--sd-color-warning)"
color-admonition-title--info = "var(--sd-color-info)"
color-admonition-title--seealso = "var(--sd-color-info)"
color-admonition-title--attention = "var(--sd-color-danger)"
color-admonition-title--danger = "var(--sd-color-danger)"
color-admonition-title--error = "var(--sd-color-danger)"

font-stack = "sofia-pro, sans-serif"
font-stack--monospace = "carbona-variable, monospace"

[tool.mudkip.override.html_theme_options.dark_css_variables]
color-foreground-primary = "#E6E6E6"
color-foreground-secondary = "#CCCCCC"
color-foreground-muted = "#A9ACAC"

color-background-primary = "#040019"
color-background-secondary = "#191F2E"
color-background-hover = "#304881"

color-code-background = "#2A4179"
color-inline-code-background = "#191F2E25"
color-code-foreground = "#A9B4D0"

color-header-text = "#54DDF8"

color-sidebar-link-text--top-level = "var(--color-foreground-muted)"
color-sidebar-caption-text = "var(--color-foreground-primary)"

color-sidebar-background = "linear-gradient(180deg, #000E19 36.39%, #0C263B 100%)"
color-sidebar-item-background--current = "transparent"
color-sidebar-search-background--focus = "var(--color-sidebar-item-background--hover)"

color-brand-primary = "#54DDF8"
color-brand-content = "#0083CF"

color-table-header-background = "var(--color-background-secondary)"
color-table-border = "#525252"

sd-color-card-background = "var(--color-background-secondary)"
sd-color-card-border-hover = "var(--color-brand-primary)"

sd-color-success = "#5CC653"
sd-color-success-text = "var(--color-foreground-primary)"

sd-color-warning = "#F1C21B"
sd-color-warning-text = "var(--color-foreground-primary)"

sd-color-info = "#54DDF8"
sd-color-info-text = "var(--color-foreground-primary)"

sd-color-danger = "#D54A44"
sd-color-danger-text = "var(--color-foreground-primary)"

sd-color-secondary = "var(--color-brand-primary)"
sd-color-secondary-text = "var(--color-foreground-primary)"

color-admonition-background = "var(--sd-color-card-background)"
color-admonition-title = "var(--color-code-foreground)"
color-announcement-background = "var(--sd-color-card-background)"

color-admonition-title--important = "var(--sd-color-success)"
color-admonition-title--caution = "var(--sd-color-warning)"
color-admonition-title--warning = "var(--sd-color-warning)"
color-admonition-title--info = "var(--sd-color-info)"
color-admonition-title--seealso = "var(--sd-color-info)"
color-admonition-title--attention = "var(--sd-color-danger)"
color-admonition-title--danger = "var(--sd-color-danger)"
color-admonition-title--error = "var(--sd-color-danger)"

font-stack = "sofia-pro, sans-serif"
font-stack--monospace = "carbona-variable, monospace"

[[tool.mudkip.override.html_theme_options.footer_icons]]
name = "GitHub"
url = "https://github.com/0xPlaygrounds/subgrounds"
html = ""
class = "fa-brands fa-github fa-l"

[[tool.mudkip.override.html_theme_options.footer_icons]]
name = "Discord"
url = "https://discord.gg/v4r4zhBAh2"
html = ""
class = "fa-brands fa-discord fa-l"

[[tool.mudkip.override.html_theme_options.footer_icons]]
name = "Twitter"
url = "https://twitter.com/Playgrounds0x"
html = ""
class = "fa-brands fa-twitter fa-l"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
